add dynamic initialize using vins; need ros

--- a/camera_models/CMakeLists.txt
+++ b/camera_models/CMakeLists.txt
@@ -66,3 +66,4 @@ add_library(camera_models
 
 target_link_libraries(Calibrations ${Boost_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES})
 target_link_libraries(camera_models ${Boost_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES})
+target_include_directories(camera_models PUBLIC "include")
