--- a/ov_msckf/CMakeLists.txt
+++ b/ov_msckf/CMakeLists.txt
@@ -7,7 +7,10 @@ project(ov_msckf)
 #set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/)
 
 # Find catkin (the ROS build system)
-find_package(catkin QUIET COMPONENTS roscpp rosbag tf std_msgs geometry_msgs sensor_msgs nav_msgs visualization_msgs cv_bridge ov_core)
+find_package(catkin QUIET COMPONENTS 
+    roscpp rosbag tf std_msgs geometry_msgs sensor_msgs nav_msgs visualization_msgs cv_bridge 
+    ov_core
+    vins_lib)
 
 # Include libraries (if we don't have opencv 4, then fallback to opencv 3)
 find_package(Eigen3 REQUIRED)
@@ -23,6 +26,8 @@ message(WARNING "OPENCV VERSION: " ${OpenCV_VERSION})
 message(WARNING "BOOST VERSION: " ${Boost_VERSION})
 
 # Describe catkin project
+message("catkin_FOUND" ${catkin_FOUND})
+
 if (catkin_FOUND)
     add_definitions(-DROS_AVAILABLE=1)
     catkin_package(
@@ -97,7 +102,7 @@ if (catkin_FOUND)
     )
 endif()
 add_library(ov_msckf_lib SHARED ${library_source_files})
-target_link_libraries(ov_msckf_lib ${thirdparty_libraries})
+target_link_libraries(ov_msckf_lib ${thirdparty_libraries} vins_lib)
 target_include_directories(ov_msckf_lib PUBLIC src)
 
 
@@ -111,11 +116,11 @@ if (catkin_FOUND)
     add_executable(run_serial_msckf src/ros_serial_msckf.cpp)
     target_link_libraries(run_serial_msckf ov_msckf_lib ${thirdparty_libraries})
 
-    add_executable(run_subscribe_msckf src/ros_subscribe_msckf.cpp)
-    target_link_libraries(run_subscribe_msckf ov_msckf_lib ${thirdparty_libraries})
+    # add_executable(run_subscribe_msckf src/ros_subscribe_msckf.cpp)
+    # target_link_libraries(run_subscribe_msckf ov_msckf_lib ${thirdparty_libraries})
 
-    add_executable(run_simulation src/run_simulation.cpp)
-    target_link_libraries(run_simulation ov_msckf_lib ${thirdparty_libraries})
+    # add_executable(run_simulation src/run_simulation.cpp)
+    # target_link_libraries(run_simulation ov_msckf_lib ${thirdparty_libraries})
 
 else()
 
@@ -125,10 +130,10 @@ else()
 endif()
 
 
-add_executable(test_sim_meas src/test_sim_meas.cpp)
-target_link_libraries(test_sim_meas ov_msckf_lib ${thirdparty_libraries})
+# add_executable(test_sim_meas src/test_sim_meas.cpp)
+# target_link_libraries(test_sim_meas ov_msckf_lib ${thirdparty_libraries})
 
-add_executable(test_sim_repeat src/test_sim_repeat.cpp)
-target_link_libraries(test_sim_repeat ov_msckf_lib ${thirdparty_libraries})
+# add_executable(test_sim_repeat src/test_sim_repeat.cpp)
+# target_link_libraries(test_sim_repeat ov_msckf_lib ${thirdparty_libraries})
 
 
