--- a/ov_data/CMakeLists.txt
+++ b/ov_data/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 2.8.8)
 # Project name
 project(ov_data)
 
-# Find catkin (the ROS build system)
-find_package(catkin REQUIRED)
+# # Find catkin (the ROS build system)
+# find_package(catkin REQUIRED)
 
 
-# Describe catkin Project
-catkin_package()
+# # Describe catkin Project
+# catkin_package()
