--- a/vins_estimator/CMakeLists.txt
+++ b/vins_estimator/CMakeLists.txt
@@ -6,32 +6,35 @@ set(CMAKE_CXX_FLAGS "-std=c++11")
 #-DEIGEN_USE_MKL_ALL")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")
 
-find_package(catkin REQUIRED COMPONENTS
-    roscpp
-    std_msgs
-    geometry_msgs
-    nav_msgs
-    tf
-    cv_bridge
-    camera_models
-    image_transport)
+# find_package(catkin REQUIRED COMPONENTS
+#     roscpp
+#     std_msgs
+#     geometry_msgs
+#     nav_msgs
+#     tf
+#     cv_bridge
+#     camera_models
+#     image_transport)
 
+# find_package(camera_models REQUIRED)
 find_package(OpenCV REQUIRED)
 
 # message(WARNING "OpenCV_VERSION: ${OpenCV_VERSION}")
 
 find_package(Ceres REQUIRED)
 
-include_directories(src ${catkin_INCLUDE_DIRS} ${CERES_INCLUDE_DIRS})
+# include_directories(src ${catkin_INCLUDE_DIRS} ${CERES_INCLUDE_DIRS})
+message(WARNING "MANUALLY LINKING TO camera_models LIBRARY....")
+include_directories(src ${CERES_INCLUDE_DIRS} ${camera_models_SOURCE_DIR}/include/)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 find_package(Eigen3)
 include_directories(
-  ${catkin_INCLUDE_DIRS}
+  # ${catkin_INCLUDE_DIRS}
   ${EIGEN3_INCLUDE_DIR}
 )
 
-catkin_package()
+# catkin_package()
 
 add_library(vins_lib
     src/estimator/parameters.cpp
@@ -43,22 +46,23 @@ add_library(vins_lib
     src/factor/projectionOneFrameTwoCamFactor.cpp
     src/factor/marginalization_factor.cpp
     src/utility/utility.cpp
-    src/utility/visualization.cpp
-    src/utility/CameraPoseVisualization.cpp
+    # src/utility/visualization.cpp
+    # src/utility/CameraPoseVisualization.cpp
     src/initial/solve_5pts.cpp
     src/initial/initial_aligment.cpp
     src/initial/initial_sfm.cpp
     src/initial/initial_ex_rotation.cpp
     src/featureTracker/feature_tracker.cpp)
-target_link_libraries(vins_lib ${catkin_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES})
+# target_link_libraries(vins_lib ${catkin_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES})
+target_link_libraries(vins_lib ${OpenCV_LIBS} ${CERES_LIBRARIES} camera_models)
 target_include_directories(vins_lib PUBLIC src)
 
-add_executable(vins_node src/rosNodeTest.cpp)
-target_link_libraries(vins_node vins_lib) 
+# add_executable(vins_node src/rosNodeTest.cpp)
+# target_link_libraries(vins_node vins_lib) 
 
-add_executable(kitti_odom_test src/KITTIOdomTest.cpp)
-target_link_libraries(kitti_odom_test vins_lib) 
+# add_executable(kitti_odom_test src/KITTIOdomTest.cpp)
+# target_link_libraries(kitti_odom_test vins_lib) 
 
-add_executable(kitti_gps_test src/KITTIGPSTest.cpp)
-target_link_libraries(kitti_gps_test vins_lib) 
+# add_executable(kitti_gps_test src/KITTIGPSTest.cpp)
+# target_link_libraries(kitti_gps_test vins_lib) 
 
