--- a/camera_models/CMakeLists.txt
+++ b/camera_models/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 2.8.3)
+# cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.1)
 project(camera_models)
 
 set(CMAKE_BUILD_TYPE "Release")
