--- a/config/Pimax/20210318.yaml
+++ b/config/Pimax/20210318.yaml
@@ -55,10 +55,10 @@ max_num_iterations: 8   # max solver itrations, to guarantee real time
 keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 
 #imu parameters       The more accurate parameters you provide, the better performance
-gyroscope_noise_density"      type="double"   value="2.0783740699543856e-02" /> acc_n: 0.1          # accelerometer measurement noise standard deviation. 
-gyroscope_random_walk"        type="double"   value="3.0074367448324271e-05" /> gyr_n: 0.01         # gyroscope measurement noise standard deviation.     
-accelerometer_noise_density"  type="double"   value="2.6561838800082605e-01" /> acc_w: 0.001        # accelerometer bias random work noise standard deviation.  
-accelerometer_random_walk"    type="double"   value="2.2683907382254142e-04" /> gyr_w: 0.0001       # gyroscope bias random work noise standard deviation.     
+acc_n: 2.6561838800082605e-01          # accelerometer measurement noise standard deviation. 
+gyr_n: 2.0783740699543856e-02         # gyroscope measurement noise standard deviation.     
+acc_w: 2.2683907382254142e-04        # accelerometer bias random work noise standard deviation.  
+gyr_w: 3.0074367448324271e-05       # gyroscope bias random work noise standard deviation.     
 g_norm: 9.81007     # gravity magnitude
 
 #unsynchronization parameters
