--- a/ov_msckf/CMakeLists.txt
+++ b/ov_msckf/CMakeLists.txt
@@ -16,10 +16,11 @@ set(catkin_FOUND 0)
 
 # Include libraries (if we don't have opencv 4, then fallback to opencv 3)
 find_package(Eigen3 REQUIRED)
-find_package(OpenCV 4 QUIET)
-if (NOT OpenCV_FOUND)
-    find_package(OpenCV 3 REQUIRED)
-endif()
+find_package(OpenCV 3 QUIET)
+# find_package(OpenCV 4 QUIET)
+# if (NOT OpenCV_FOUND)
+#     find_package(OpenCV 3 REQUIRED)
+# endif()
 find_package(Boost REQUIRED COMPONENTS system filesystem thread date_time)
 
 find_package(Pangolin REQUIRED)
