solve 'image received out of order' after initialize

--- a/config/Pimax/20210318_ov.yaml
+++ b/config/Pimax/20210318_ov.yaml
@@ -49,8 +49,8 @@ up_msckf_sigma_px : 1.0
 up_msckf_chi2_multipler : 1
 up_slam_sigma_px : 1.0
 up_slam_chi2_multipler : 1
-up_aruco_sigma_px : 1.0
-up_aruco_chi2_multipler : 8
+# up_aruco_sigma_px : 1.0
+# up_aruco_chi2_multipler : 8
 
 
 cam0_is_fisheye: 1
