--- a/config/Pimax/20210318_ov.yaml
+++ b/config/Pimax/20210318_ov.yaml
@@ -12,7 +12,8 @@ path_time: "/tmp/traj_timing.txt"
 
 stereo_pairs: [0,1]
 
-path_vins_config: "/home/qinyf1/1Code/open_vins/config/Pimax/20210318.yaml"
+path_vins_config: "/home/qyf/workspace/catkin_ws_ov/src/open_vins/config/Pimax/20210318_vf.yaml"
+# path_vins_config: "/home/qinyf1/1Code/open_vins/config/Pimax/20210318_vf.yaml"
 
 max_clones: 11
 max_slam:  25
