solve compile bugs, use new vins-fusion code

--- a/ov_eval/CMakeLists.txt
+++ b/ov_eval/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required(VERSION 2.8.8)
+# cmake_minimum_required(VERSION 2.8.8)
+cmake_minimum_required(VERSION 3.1)
 
 # Project name
 project(ov_eval)
 
 # Find catkin (the ROS build system)
 find_package(catkin QUIET COMPONENTS roscpp rospy geometry_msgs nav_msgs sensor_msgs)
-
+set(catkin_FOUND 0)
 # Include libraries
 find_package(Eigen3 REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system filesystem thread date_time)
