--- a/config/Pimax/20210318_ov.yaml
+++ b/config/Pimax/20210318_ov.yaml
@@ -33,6 +33,10 @@ dotime   : 0
 path_est : "/tmp/traj_estimate.txt"
 path_time: "/tmp/traj_timing.txt"
 
+# saving time cost
+record_timing_information: 1
+record_timing_filepath: "ov_msckf_timing.txt"
+
 stereo_pairs: [0,1]
 
 # path_vins_config: "/home/qyf/workspace/catkin_ws_ov/src/open_vins/config/Pimax/20210318_vf.yaml"
