--- a/config/Pimax/20210318_ov.yaml
+++ b/config/Pimax/20210318_ov.yaml
@@ -37,6 +37,10 @@ path_time: "/tmp/traj_timing.txt"
 record_timing_information: 1
 record_timing_filepath: "ov_msckf_timing.csv"
 
+# saving estimates
+save_estimates: 1
+save_estimates_filepath: "estimates.csv"
+
 stereo_pairs: [0,1]
 
 # path_vins_config: "/home/qyf/workspace/catkin_ws_ov/src/open_vins/config/Pimax/20210318_vf.yaml"
